<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context="com.example.cristi.noriaejercicio17final.ActEstadisticasNoria">

    <LinearLayout
        android:layout_width="258dp"
        android:layout_height="468dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481">

        <TextView
            android:id="@+id/tvPrueba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/fondotextview"
            android:text="@string/totalPersonas"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="201dp" />


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/fondoadaptador"></com.github.mikephil.charting.charts.BarChart>

        <LinearLayout
            android:id="@+id/linearTituloSeleccionEstadistica"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvSeleccionNoria"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fondotextview"
                android:text="@string/tvSeleccionNoria"
                android:textColor="@color/azulOscuro" />

            <TextView
                android:id="@+id/tvSeleccionViaje"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fondotextview"
                android:text="@string/tvSeleccionViaje"
                android:textColor="@color/azulOscuro" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSeleccionDatosMostrar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fondoadaptador" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.89"
                android:background="@drawable/fondoadaptador" />

            <Button
                android:id="@+id/bMostrarDatos"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:background="@color/azulOscuro"
                android:text="@string/bMostrarDatos"
                android:textColor="@color/azulClaro"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBusquedaConcreta"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/fondoadaptador"
            android:text="@string/busquedaConcreta"
            android:textColor="@color/azulOscuro" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
