<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cFondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context="com.example.cristi.noriaejercicio17final.MainActivity">

    <LinearLayout
        android:id="@+id/linearMain"
        android:layout_width="351dp"
        android:layout_height="484dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="19dp">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:text="@string/tvNombre"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listNorias"
            android:layout_width="211dp"
            android:layout_height="139dp"
            android:layout_margin="100dp"
            android:layout_weight="0.05"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bControlCaja"
            style="@android:style/Theme.Material"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fondotextview"
            android:text="@string/bControlCaja" />

        <Button
            android:id="@+id/bReinicio"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fondotextview"
            android:text="@string/bReinicio" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
